# Sportstradamus

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .python-version  CLAUDE.md  CLAUDE.original.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  README.md  Wolverine_Weapons_of_Armageddon_Vol_1_1.webp:Zone.Identifier  credentials.json  get_lines.ipynb  nhl_test.py  pyproject.toml  remap_archive_cvs.py  requirements.txt  sportsbook_scraper.py  test.ipynb  test_distribution_comparison.py  test_distribution_fit.py  test_distributions.py  test_gamma_vs_zagamma.ipynb  token.json
.claude/: settings.json
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml
creds/: scrapeops_cred.json  token.json
data/: caesars_league_ids.json
docs/: CORRELATE_AUDIT.md  DEPRECATED_TRIAGE.md  OVERCONFIDENCE_INVESTIGATION.md  PARLAY_AUDIT.md  PARLAY_CALIBRATION_2026-05-05.csv  PHASE_3_IMPLEMENTATION.md  STYLE_GUIDE.md  dashboard_remote_access.md  gbdt_mean_regression_plan.md  odds_archive_history_plan.md  pipeline_diagrams.md  requirements.txt  sportstradamus_roadmap_v2.md  sportstradamus_roadmap_v2.md:mshield  underdog_edge_suite.md  underdog_edge_suite.md:mshield
docs/source/: conf.py  index.rst
docs/superpowers/plans/: 2026-05-18-fga-fg3m-overconfidence-fix.md  2026-05-19-overconfidence-findings-handback.md
logs/2026-05-07/: meditate.jsonl
scripts/: run_job.sh  test_correlation_predictive_power.py  test_correlation_time_weighting.py
src/deprecated/: README.md  books_deprecated.py  clean_archive.py  correlation.py  get_lines.py  helpers_orphans.py  migrate_archive_to_skewnorm.py  opt_parlay.py  remap_archive_cvs.py  see_features.py  sheets.py  stats_deprecated.py  test.py  unused_funcs.py
src/deprecated/.archived/: opt_kelley_bet.py
src/propstradamus/: books.py  combo_odds.py  get_lines.py  helpers.py  make_combos copy.py  make_combos.py  mlb_train.py  moneylines.py  moneylines_hist.py  nba_train.py  nhl_train.py  propstradamus.py  spiderLogger.py  stats.py  train.py  train_playground.py  training_report.py
src/propstradamus/data/: caesars_res.json  parp_res.json  stat_map.json  th_res.json  training_report.json  training_report.txt  ud_res.json
src/sportsbook_spider/: books.py  combo_odds.py  get_lines.py  get_weights.py  helpers.py  learn_weights.py  make_combos copy.py  make_combos.py  mlb_train.py  moneylines.py  moneylines_hist.py  nba_train.py  nhl_train.py  spiderLogger.py  sportsbook_scraper.py  sportsbook_spider.py  stats.py  test.py  token.json  training_report.py
src/sportsbook_spider/creds/: token.json
src/sportsbook_spider/data/: caesars_league_ids.json  caesars_res.json  pp_res.json  stat_map.json  training_report.json  weights.json
src/sportstradamus/: analysis.py  analyze_parlay_hist.py  books.py  clean_archive.py  clv.py  combo_odds.py  correlation.py  dashboard.py  dashboard_app.py  dashboard_data.py  dashboard_detail.py  feature_selection.py  get_lines.py  helpers.py  make_combos copy.py  make_combos.py  make_lines.py  make_rivals.py  moneylines.py  moneylines_hist.py  nightly.py  opt_kelley_bet.py  opt_parlay.py  optimize_train.py  plot_parlay_hist.py  refactor.py  see_features.py  skew_normal.py  spiderLogger.py  sportstradamus.py  stats.py  test.py  train.py  train_playground.py  training_report.py  unused_funcs.py
src/sportstradamus/data/: .gitignore  abbreviations.json  banned_combos.json  book_weights.json  boxscore.json  combo_props.json  corr_modifiers.json  current_meta.json  experiment_results.json  feature_filter.json  features_to_filter.json  get_career_stats.ipynb  mlb_data.datshield  most_important_features.json  name_map.json  nba_comps.json  nba_data.datshield  nfl_comps.json  nfl_data.datshield  nhl_comps.json  nhl_data.datshield  old_stat_cv.json  park_factor.json  playerCompStats.json  prop_books.json  resolve_meta.json  stat_cv.json  stat_dist.json  stat_map.json  stat_std.json  stat_zi.json  statcast.json  training_report.txt  underdog_payouts.json  upcoming_events.json  wnba_data.datshield
src/sportstradamus/drafts/: data_merge.py  data_process.py  forecast.py  train.py  update_ez_adp.py
src/sportstradamus/helpers/: __init__.py  archive.py  config.py  distributions.py  io.py  logging.py  scraping.py  text.py
src/sportstradamus/pages/: 1_Overview.py  1_🎯_Predictions_Today.py  2_Market_Diagnostics.py  2_🎯_Predictions_Parlays.py  3_Correlations_Parlays.py  3_📊_Stats_Overview.py  4_Profit_Simulation.py  4_📊_Stats_Diagnostics.py  5_📊_Stats_Correlations.py  6_📊_Stats_Profit_Sim.py  7_📊_Stats_Model_Training.py
src/sportstradamus/prediction/: __init__.py  cli.py  correlation.py  model_prob.py  parlay.py  persist.py  scoring.py  sheets.py
src/sportstradamus/scripts/: add_observed_at_to_archive.py  audit_parlay_calibration.py  clean_archive.py  compression_eval.py  evaluate_comp_features.py  evaluate_features.py  evaluate_model_features.py  migrate_archive_to_duckdb.py  migrate_archive_to_skewnorm.py  migrate_correlations_to_parquet.py  migrate_gamelogs_to_parquet.py  migrate_pickle_to_parquet.py  migrate_training_data_to_parquet.py  moneylines_hist.py  optimize_comp_weights.py  plot_parlay_hist.py  remap_archive_cvs.py  reset_stat_structs.py  test_comp_factors.py  test_distributions.py
src/sportstradamus/stats/: __init__.py  base.py  mlb.py  nba.py  nfl.py  nhl.py  wnba.py
src/sportstradamus/strategies/: README.md  __init__.py  _pickem_emit.py  kelly.py  underdog_pickem.py
src/sportstradamus/training/: __init__.py  calibration.py  cli.py  config.py  correlate.py  data.py  hyperparams.py  markets.py  pipeline.py  report.py  shap.py
tests/: test_archive_history.py  test_clv.py  test_dashboard_detail.py
tests/golden/: conftest.py  test_archive_wal_recovery.py  test_cli_help.py  test_clv_close_sanity.py  test_clv_explode.py  test_compression_eval.py  test_correlate.py  test_imports.py  test_kelly.py  test_parlay_search.py  test_pipeline_snapshots.py  test_prediction_imports.py  test_training_metrics.py  test_underdog_pickem.py
tests/integration/: conftest.py  test_end_to_end.py
(+19 files in other folders)
