[tool.poetry]
name = "Sportstradamus"
version = "3.9.1"
description = "Scrape Sportsbooks Odds and Player Stats and export to Google Sheets"
authors = ["Trevor Jerome <trevor81994@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/tjjerome/sportstradamus"
repository = "https://github.com/tjjerome/sportstradamus"

[tool.poetry.dependencies]
python = "^3.11"
python-snappy = "^0.6.1"
google-auth-oauthlib = ">=1.0.0"
gspread = ">=5.8.0"
mlb-statsapi = ">=1.6.1"
nba-api = ">=1.2"
nfl-data-py = ">=0.3.2"
numpy = ">=1.24.3"
pandas = ">=2.0.1"
protobuf = ">=4.23.0"
requests = ">=2.30.0"
scipy = ">=1.10.1"
tqdm = ">=4.65.0"
importlib = "^1.0.4"
click = "^8.1.3"
pytz = "^2023.3"
scikit-learn = "==1.4.0"
shap = ">=0.44.0,<0.45.0"
lightgbmlss = {git = "https://github.com/StatMixedML/LightGBMLSS.git"}
torch = {version = "2.1.2", source = "pytorch_cpu"}
line-profiler = "^4.1.3"
klepto = {extras = ["crypto"], version = "^0.2.5"}

[tool.poetry.scripts]
prophecize = "sportstradamus.sportstradamus:main"
confer = "sportstradamus.moneylines:confer"
meditate = "sportstradamus.train:meditate"
reflect = "sportstradamus.analyze_parlay_hist:reflect"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"
sphinx-pdj-theme = "^0.4.0"
sphinx-pyproject = "^0.1.0"
lightgbm = ">=4.2.0,<4.3.0"
pytest = "^7.3.2"
matplotlib = "^3.7.1"
optuna = ">=3.5.0,<3.6.0"
optuna-dashboard = "^0.10.2"
imbalanced-learn = "^0.10.1"
smogn = "^0.1.2"
seaborn = "^0.13.1"
flask = "^2.3.2"
flask-table = "^0.5.0"


[[tool.poetry.source]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"