[tool.poetry]
name = "Sportstradamus"
version = "4.2.0"
description = "Scrape Sportsbooks Odds and Player Stats and export to Google Sheets"
authors = ["Trevor Jerome <trevor81994@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/tjjerome/sportstradamus"
repository = "https://github.com/tjjerome/sportstradamus"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
python-snappy = "^0.6.1"
google-auth-oauthlib = ">=1.0.0"
gspread = ">=5.8.0"
mlb-statsapi = ">=1.6.1"
nba-api = ">=1.11.4"
nfl-data-py = ">=0.3.2"
numpy = ">=1.24.3,<2.0.0"
pandas = ">=2.0.1"
protobuf = ">=4.23.0"
requests = ">=2.30.0"
scipy = ">=1.10.1"
tqdm = ">=4.65.0"
importlib = "^1.0.4"
click = "^8.1.3"
pytz = "^2023.3"
scikit-learn = ">=1.5.0,<1.8.0"
shap = ">=0.44.0,<0.45.0"
lightgbmlss = ">=0.6"
torch = {version = "2.1.2", source = "pytorch_cpu"}
line-profiler = "^4.1.3"
klepto = {extras = ["archives"], version = "^0.2.5"}
nflreadpy = "^0.1.2"
polars = "^1.33.1"
pyarrow = "^21.0.0"
scrapeops-python-requests = "^0.4.7"
streamlit = ">=1.30"
plotly = ">=5.18"

[tool.poetry.scripts]
prophecize = "sportstradamus.prediction.cli:main"
confer = "sportstradamus.moneylines:confer"
meditate = "sportstradamus.training.cli:meditate"
dashboard = "sportstradamus.dashboard:run"
reflect = "sportstradamus.nightly:run"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"
sphinx-pdj-theme = "^0.4.0"
sphinx-pyproject = "^0.1.0"
lightgbm = ">=4.2.0,<4.3.0"
pytest = "^7.3.2"
matplotlib = "^3.7.1"
optuna = ">=3.5.0,<3.6.0"
optuna-dashboard = "^0.10.2"
imbalanced-learn = "^0.10.1"
smogn = "^0.1.2"
seaborn = "^0.13.1"
flask = "^2.3.2"
flask-table = "^0.5.0"
ruff = "^0.6.0"
mypy = "^1.10.0"
pre-commit = "^3.7.0"


[[tool.poetry.source]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# -----------------------------------------------------------------------------
# Code quality tooling. See docs/STYLE_GUIDE.md for the conventions these
# configurations enforce.
# -----------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
# Archived code stays readable but is not held to the live style.
extend-exclude = ["src/deprecated"]

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, UP: pyupgrade, B: bugbear,
# D: pydocstyle, SIM: simplify, RUF: ruff-native, N: naming,
# PTH: pathlib, PLR/PLW: pylint refactor/warning, PERF: performance,
# TID: tidy-imports.
select = [
    "E", "W", "F", "I", "UP", "B", "D", "SIM", "RUF",
    "N", "PTH", "PLR", "PLW", "PERF", "TID",
]
ignore = [
    # Module and package docstrings — ratcheting up as each file gains one.
    "D100", "D104",
    # Argument and statement-count limits — advisory during the refactor.
    "PLR0913", "PLR0915",
    # Long-line rule — the formatter already handles wrapping.
    "E501",

    # ----- Refactor ratchet: lifted as each phase fixes the underlying issue.
    # Phase 3 (helpers/moneylines) removes:
    #   D101 D102 D103 D107 D205 D414 D415 D417 — docstring coverage
    "D101", "D102", "D103", "D107", "D205", "D414", "D415", "D417",
    # Phase 3-5 (renaming variables, splitting big functions) removes:
    #   N803 N806 N816 — non-conforming names inside the refactored modules
    #   PLR0911 PLR0912 — branch/return counts
    #   PLR2004 — magic-value comparisons (replaced by named constants)
    #   PLW0602 PLW0603 — global-statement usage in train.py / sportstradamus.py
    "N803", "N806", "N816",
    "PLR0911", "PLR0912", "PLR2004",
    "PLW0602", "PLW0603",
    # Phase 3 (helpers/scraping + helpers/config) removes:
    #   PTH100 PTH110 PTH113 PTH118 PTH120 PTH123 — pathlib migration
    "PTH100", "PTH110", "PTH113", "PTH118", "PTH120", "PTH123",
    # Phase 4-5 (deep refactors) removes:
    #   B007 B008 B023 — bugbear false positives in numeric code
    #   E402 — late imports inside script-style modules
    #   E714 E721 E722 E741 — older idioms inside stats/train
    #   F401 F403 F405 F811 — wildcard re-exports across packages
    #   F821 — undefined names (limited to deprecated/unused_funcs.py; archived in Phase 2)
    #   PERF401 PERF403 — performance suggestions
    #   PLW0127 PLW2901 — assignment patterns
    #   PLR1704 — argument shadowing
    #   RUF001 RUF002 RUF003 RUF012 — Unicode characters and class defaults
    #   SIM102 — collapsible-if
    #   UP015 — redundant open modes
    #   W291 W293 — whitespace inside docstrings
    "B007", "B008", "B023",
    "E402", "E714", "E721", "E722", "E741",
    "F401", "F403", "F405", "F811", "F821",
    "PERF401", "PERF403",
    "PLW0127", "PLW2901", "PLR1704",
    "RUF001", "RUF002", "RUF003", "RUF012",
    "SIM102",
    "UP015",
    "W291", "W293",
    # Phase 2 (rename modules) removes:
    #   N812 N999 — module/import casing
    "N812", "N999",
]

[tool.ruff.lint.per-file-ignores]
# Scripts are terser by nature; tests do not need docstrings.
"src/sportstradamus/scripts/*" = ["D", "PLR"]
"tests/*" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["sportstradamus"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.mypy]
python_version = "3.11"
files = ["src/sportstradamus"]
# Advisory: run alongside ruff but do not gate merges.
follow_imports = "silent"
ignore_missing_imports = true
warn_unused_ignores = true
# Strict on what is annotated; permissive on what is not.
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]